#50: Create validators for all forms.
DraftFinancePosting

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -14,3 +14,6 @@ bookingNumber=Booking number
 chose=Chose
 
 finance.posting.was.deleted=Finance posting was deleted
+
+must.chose.one.finance.account=You must choose one finance account
+text.to.long=Text to long, maximum is 50 character
