--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -14,3 +14,6 @@ bookingNumber=Bilagsnummer
 chose=V\u00E6lg
 
 finance.posting.was.deleted=Bilaget blev slettet
+
+must.chose.one.finance.account=Du skal v\u00E6lge en finanskonto
+text.to.long=Teksten er for lang, max 50 bogstaver
