#50: Create validators for all forms.
LegalEntity

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
@@ -14,3 +14,7 @@ new.legal.entity=New Legal entity
 created.and.saved.new.entity=New Legal entity has been created
 changes.has.been.saved=The changes has been saved
 
+legal.identification.to.long=Legal identification is to long, max 25 character
+address.to.long=Address to long, max 200 character
+postal.code.to.long=Postal code to long, max 20 character
+
