--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
@@ -13,3 +13,7 @@ legal.entity.was.deleted=Den juridiske enhed er blevet slettet
 new.legal.entity=Ny juridisk enhed
 created.and.saved.new.entity=Der er blevet lavet en ny juridisk enhed
 changes.has.been.saved=\u00C6ndringerne er blevet gemt
+
+legal.identification.to.long=CPR/CVR nummer for langt, max 25 karakterer
+address.to.long=Adressen er for lang, max 200 karakterer
+postal.code.to.long=Postnummeret for lang, max 20 karakterer
