--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityVatTypes.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityVatTypes.properties
@@ -5,6 +5,14 @@ new.entity.vat.types.incoming.percentage=25
 new.entity.vat.types.outgoing.percentage=25
 new.entity.vat.types.representation.percentage=6.25
 
+new.entity.finance.account.LIABILITY.vat.incoming=VAT incoming
+new.entity.finance.account.LIABILITY.vat.incoming.account.number=26100
+new.entity.finance.account.LIABILITY.vat.representation=VAT representation
+new.entity.finance.account.LIABILITY.vat.representation.account.number=26200
+new.entity.finance.account.LIABILITY.vat.outgoing=VAT outgoing
+new.entity.finance.account.LIABILITY.vat.outgoing.account.number=26300
+
+
 
 
 
