#44: Implement saving of financepostings

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -3,6 +3,10 @@ description=Here you can create and edit finance postings
 daily.ledger=Daily ledgers
 action=Edit
 
+button.save=Save posting
+button.book.chosen=Book chosen postings
+button.book.all=Book all postings in daily ledger
+
 date=Date
 financeAccount=Finance account
 finance.account.reverse=Reverse finance account
