--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -3,6 +3,10 @@ description=Her kan du oprette og redigere finansposteringer
 daily.ledger=Kasseklader
 action=Rediger
 
+button.save=Gem postering
+button.book.chosen=Bogf\u00F8r valgte posteringer
+button.book.all=Bogf\u00F8r alle posteringer i klade
+
 date=Dato
 financeAccount=Finanskonto
 finance.account.reverse=Modkonto
