#44: Implement saving of financepostings

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -21,3 +21,6 @@ finance.posting.was.deleted=Finance posting was deleted
 
 must.chose.one.finance.account=You must choose one finance account
 text.to.long=Text to long, maximum is 50 character
+must.choose.account.for.vat=If you choose a vattype you must also choose a finance account
+
+following.postings.did.not.balance=The following finance postings did not balance {0}
