--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -21,3 +21,6 @@ finance.posting.was.deleted=Bilaget blev slettet
 
 must.chose.one.finance.account=Du skal v\u00E6lge en finanskonto
 text.to.long=Teksten er for lang, max 50 bogstaver
+must.choose.account.for.vat=Hvis du v\u00E6lger momstype, skal du ogs\u00E5 v\u00E6lge en finanskonto
+
+following.postings.did.not.balance=De f\u00F8lgende posteringer stemte ikke {0}
