--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -1,4 +1,7 @@
 title=Balance
 description=Here you create balance reports for your accounting
 
+account.number=Number
+account.name=Name
+account.sum=Sum
 
