--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -2,3 +2,7 @@ title=SaldoBalance
 description=Her kan du tr\u00E6kke en saldobalance for dit regnskab
 
 
+account.number=Nummer
+account.name=Navn
+account.sum=Sum
+
