#41: Email confirmed registration

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
@@ -3,6 +3,7 @@ username=Username
 password=Password
 repeat.password=Repeat password
 repeat_password=Repeat password
+email=E-mail
 create.account=Create account
 account.created.for.user=Account created for user
 
