--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
@@ -4,6 +4,7 @@ password=Kodeord
 repeat.password=Gentag kodeord
 repeat_password=Gentag kodeord
 create.account=Opret konto
+email=E-mail
 account.created.for.user=Konto oprettet for bruger
 
 username.not.adequate=Brugernavn skal v\u00E6re mellem 8 og 25 tegn langt
