--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -279,6 +279,14 @@
             <version>1.8.0.7</version>
         </dependency>
 
+        <!--Mail library-->
+        <dependency>
+        	<groupId>javax.mail</groupId>
+        	<artifactId>mail</artifactId>
+        	<version>1.4.7</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
