#62: Fix logging AGAIN!

--- a/mainwar/src/test/resources/web.xml
+++ b/mainwar/src/test/resources/web.xml
@@ -3,8 +3,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <display-name>eazyregnskab</display-name>
-
+    <display-name>eazyregnskab</display-name
 
     <listener>
         <listener-class>
