#65: Attach loading behavior to buttons

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -6,6 +6,7 @@ button.cancel=Fortryd
 button.edit=Rediger
 button.delete=Slet
 button.new=Ny
+button.loading=Indl\u00E6ser...
 
 #Links
 settings=Indstillinger
