--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage_da.utf8.properties
@@ -2,4 +2,7 @@ username=Brugernavn
 password=Kodeord
 remember.me=Husk mig
 
+login=Log ind
+loading=Indl\u00E6ser...
+
 error.on.login=Forkert brugernavn eller kodeord
