--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.utf8.properties
@@ -2,4 +2,7 @@ username=Username
 password=Password
 remember.me=Remember me
 
+login=Login
+loading=Loading...
+
 error.on.login=Wrong username or password
