#66: Create headline and sum finance accounts

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -31,5 +31,7 @@ FinanceAccountType.PROFIT=Profit
 FinanceAccountType.EXPENSE=Expense
 FinanceAccountType.ASSET=Asset
 FinanceAccountType.LIABILITY=Liability
+FinanceAccountType.HEADLINE=Headline
+FinanceAccountType.SUMFROM=Sum from
 
 
