--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -31,6 +31,8 @@ FinanceAccountType.PROFIT=Indt\u00E6gt
 FinanceAccountType.EXPENSE=Udgift
 FinanceAccountType.ASSET=Aktiv
 FinanceAccountType.LIABILITY=Passiv
+FinanceAccountType.HEADLINE=Overskrift
+FinanceAccountType.SUMFROM=Sum fra
 
 
 
