#66: Create headline and sum finance accounts

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -32,7 +32,7 @@ FinanceAccountType.EXPENSE=Udgift
 FinanceAccountType.ASSET=Aktiv
 FinanceAccountType.LIABILITY=Passiv
 FinanceAccountType.HEADLINE=Overskrift
-FinanceAccountType.SUMFROM=Sum fra
+FinanceAccountType.SUM=Sum
 
 
 
