--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -32,6 +32,6 @@ FinanceAccountType.EXPENSE=Expense
 FinanceAccountType.ASSET=Asset
 FinanceAccountType.LIABILITY=Liability
 FinanceAccountType.HEADLINE=Headline
-FinanceAccountType.SUMFROM=Sum from
+FinanceAccountType.SUM=Sum
 
 
