#71: Refactor pages to simpler currentselectionssystem 70: Dailyledgers remeber last used posting number

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
@@ -12,3 +12,5 @@ daily.ledger.was.never.saved=Daily ledger was never saved
 
 name.all.ready.exists=Name is allready in use
 name.to.long=Name is to long
+
+nextBookingNumber=Next booking number
