--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
@@ -2,7 +2,7 @@ title=Kasseklader
 description=Her kan du lave klasseklader
 action=Rediger
 
-name=Navn
+name.label=Navn
 new.ledger=Ny kasseklade
 
 daily.ledger.was.deleted=Kassekladen blev slettet
@@ -12,3 +12,5 @@ daily.ledger.was.never.saved=Kassekladen var ikke gemt
 
 name.all.ready.exists=Navnet er allerede i brug
 name.to.long=Navnet er for langt
+
+nextBookingNumber=N\u00E6ste bilagsnummer
