#76: Create filters for balancepage

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -7,6 +7,7 @@ button.edit=Rediger
 button.delete=Slet
 button.new=Ny
 button.loading=Indl\u00E6ser...
+button.refresh=Genopfrisk
 
 #Links
 settings=Indstillinger
