--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -5,3 +5,7 @@ account.number=Number
 account.name=Name
 account.sum=Sum
 
+dateFrom=From date
+dateTo=To date
+AccountFrom=From account
+AccountTo=To account
