--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -6,3 +6,7 @@ account.number=Nummer
 account.name=Navn
 account.sum=Sum
 
+dateFrom=Fra dato
+dateTo=Til dato
+AccountFrom=Fra konto
+AccountTo=Til konto
