--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -7,6 +7,7 @@ button.edit=Edit
 button.delete=Delete
 button.new=New
 button.loading=Loading...
+button.refresh=Refresh
 
 #Links
 settings=Settings
