#82: Elaborate pricing page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/PricingPage_da.utf8.properties
@@ -1,5 +1,56 @@
 title=Priser
 info.text.heading=Hvor meget koster det?
-info.text=Vores priser er yderst rimelige, du betaler kun for forbrug. \
-  Hvis du har xx bilag betaler du xx DKK, har du mellem xx og xx bilag betaler du XX DKK, og har du over \
-  xx bilag, betaler du xx DKK.
+info.text=Vores priser er yderst rimelige, du betaler kun for dit forbrug. <br><br>\
+  Der er ingen tilk\u00F8bsmoduller eller gebyrer ved ekstra brugere. <br><br>\
+  Hvis du har under 300 posteringer&sup1; om \u00E5ret er Eazy regnskab gratis&sup2;. <br>\
+  Hvis du har mellem 300 og 3000 posteringer&sup1; om \u00E5ret betaler du 30 DKK om m\u00E5neden.<br>\
+  Har du over 3000 posteringer&sup1; om \u00E5ret betaler du 70 DKK om m\u00E5neden. \
+  <br>\
+ <table>\
+    <tr>\
+        <td class="span2"> \
+            Posteringer pr. \u00E5r\
+        </td>\
+        <td class="span2"> \
+            Pris\
+        </td>\
+    </tr>\
+    <tr>\
+        <td>\
+            300 <\
+        </td>\
+        <td>\
+            GRATIS\
+        </td>\
+    </tr>\
+    <tr>\
+        <td>\
+            300 - 3000\
+        </td>\
+        <td>\
+            30 DKK\
+        </td>\
+    </tr>\
+    <tr>\
+        <td>\
+            < 3000\
+        </td>\
+        <td>\
+            70 DKK\
+        </td>\
+    </tr>\
+  </table>\
+<br>\
+  Overstiger du din valgte abonnementstype, bliver din betaling reguleret med bagudvirkede virkning, for det regnskab\u00E5r hvor du overskrider gr\u00E6nsen.\
+<br><br> \
+  Der forudbetales for 3 m\u00E5neder ad gangen.\
+<br>\
+<br>\
+  Har du stadig lyst til at pr\u00F8ve Eazy regnskab er de f\u00F8rste 30 dage gratis.  \
+<br>\
+<br>\
+<br>\
+<br>\
+<br>\
+  &sup1; 3 posteringer svarer ca. til 1 bilag. <br>\
+  &sup2; Visse funktioner er kun tilg\u00E6ngelige for betalende brugere. \
