--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -4,6 +4,7 @@ description=Here you create balance reports for your accounting
 account.number=Number
 account.name=Name
 account.sum=Sum
+account.sum.compare=Sum same time last year
 
 dateFrom=From date
 dateTo=To date
