--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -5,6 +5,7 @@ description=Her kan du tr\u00E6kke en saldobalance for dit regnskab
 account.number=Nummer
 account.name=Navn
 account.sum=Sum
+account.sum.compare=Sum sidste \u00E5r
 
 dateFrom=Fra dato
 dateTo=Til dato
