#81: Vat reverse account for EU vat

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
@@ -4,6 +4,7 @@ description=Her kan du ops\u00E6tte din momskonti og momstyper
 name=Navn
 percentage=Procentsats
 finance.account=Finanskonto til moms
+finance.account.reverse=Modfinanskonto til moms
 
 action=Rediger
 
