--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
@@ -3,7 +3,8 @@ description=Here you can create, edit and delete vat types
 
 name=Name
 percentage=Percentage
-finance.account=Finans account for VAT
+finance.account=Finance account for VAT
+finance.account.reverse=Reverse finance account for VAT
 
 action=Edit
 
@@ -12,5 +13,5 @@ vat.type.is.in.use=Vat type is in use, and cannot be deleted
 changes.has.been.saved=Changes have been saved
 vat.type.was.never.saved=Vat type was never saved
 
-name.all.ready.exists=Name is allready in use
+name.all.ready.exists=Name is all ready in use
 name.to.long=Name is to long
