#77: Bookkeepingpage needs VAT on reverse account

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -12,6 +12,7 @@ financeAccount=Finanskonto
 finance.account.reverse=Modkonto
 amount=Bel\u00F8b
 vatType=Momstype
+reverseVatType=Momstype
 text=Posteringstekst
 vatAmount=Moms bel\u00F8b
 bookingNumber=Bilagsnummer
