--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -12,6 +12,7 @@ financeAccount=Finance account
 finance.account.reverse=Reverse finance account
 amount=Amount
 vatType=Vat type
+reverseVatType=Vat type
 vatAmount=Vat amount
 text=Description
 bookingNumber=Booking number
