#94: Add more currencies and countries

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -23,10 +23,97 @@ reports=Reports
 reports.balance=Balance
 
 #Countries
-Country.DK=Denmark
+Country.DNK=Denmark
+Country.AUS=Austria
+Country.BEL=Belgium
+Country.CYP=Cyprus
+Country.DEU=Germany
+Country.EST=Estonia
+Country.ESP=Spain
+Country.FIN=Finland
+Country.FRA=France
+Country.GRC=Greece
+Country.IRL=Ireland
+Country.ITA=Italy
+Country.LUX=Luxembourg
+Country.LVA=Latvia
+Country.MCO=Monaco
+Country.MLT=Malta
+Country.NLD=Netherlands
+Country.PRT=Portugal
+Country.SVN=Slovenia
+Country.SVK=Slovakia
+Country.SMR=San Marino
+Country.VAT=Vatican
+Country.USA=United States
+Country.GBR=United Kingdom
+Country.SWE=Sweden
+Country.NOR=Norway
+Country.ISL=Iceland
+Country.CHE=Switzerland
+Country.CAN=Canada
+Country.JPN=Japan
+Country.NZL=New Zealand
+Country.LTU=Lithuania
+Country.POL=Poland
+Country.CZE=Czech Republic
+Country.HUN=Hungaria
+Country.HKG=Hong Kong
+Country.SGP=Singapore
+Country.ZAF=South Africa
+Country.BGR=Bulgaria
+Country.ROU=Romania
+Country.TUR=Turkey
+Country.KOR=Korea
+Country.HRV=Croatia
+Country.RUS=Russian Federation
+Country.THA=Thailand
+Country.MYS=Malaysia
+Country.PHL=Philippines
+Country.IDN=Indonesia
+Country.CHN=China
+Country.BRA=Brazil
+Country.MEX=Mexico
+Country.IND=India
+Country.ISR=Israel
 
 #Currencies
-MoneyCurrency.DKK=DKK
+MoneyCurrency.DKK=Danish Krone
+MoneyCurrency.EUR=EURO
+MoneyCurrency.USD=US dollar
+MoneyCurrency.GBP=Pound Sterling
+MoneyCurrency.SEK=Swedish krona
+MoneyCurrency.NOK=Norwegian Krona
+MoneyCurrency.ISK=Iceland Krona
+MoneyCurrency.CHF=Swiss Franc
+MoneyCurrency.CAD=Canadian Dollar
+MoneyCurrency.JPY=Yen
+MoneyCurrency.AUD=Australian Dollar
+MoneyCurrency.NZD=New Zealand Dollar
+MoneyCurrency.LVL=Latvian Lats
+MoneyCurrency.LTL=Lithuanian Litas
+MoneyCurrency.PLN=Zloty
+MoneyCurrency.CZK=Czech Koruna
+MoneyCurrency.HUF=Forint
+MoneyCurrency.HKD=Hong Kong Dollar
+MoneyCurrency.SGD=Singapore Dollar
+MoneyCurrency.ZAR=Rand
+MoneyCurrency.BGN=Bulgarian Lev
+MoneyCurrency.RON=New Leu
+MoneyCurrency.TRY=new Turkish Lira
+MoneyCurrency.KRW=Won
+MoneyCurrency.HRK=Croatian Kuna
+MoneyCurrency.RUB=Russian Ruble
+MoneyCurrency.THB=Bath
+MoneyCurrency.MYR=Malaysian Ringgit
+MoneyCurrency.PHP=Philippine Peso
+MoneyCurrency.IDR=Rupiah
+MoneyCurrency.CNY=Yuan Renminbi
+MoneyCurrency.BRL=Brazilian Real
+MoneyCurrency.MXN=Mexican Peso
+MoneyCurrency.INR=Indian Rupee
+MoneyCurrency.ILS=New Israeli Sheqel
+MoneyCurrency.XDR=Special drawing rights
 
 FinanceAccountType.PROFIT=Profit
 FinanceAccountType.EXPENSE=Expense
