--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -23,10 +23,98 @@ reports=Rapporter
 reports.balance=Saldobalance
 
 #Countries
-Country.DK=Danmark
+Country.DNK=Danmark
+Country.AUS=\u00D8strig
+Country.BEL=Belgien
+Country.CYP=Cypern
+Country.DEU=Tyskland
+Country.EST=Estland
+Country.ESP=Spanien
+Country.FIN=Finland
+Country.FRA=Frankrig
+Country.GRC=Gr\u00E6kenland
+Country.IRL=Irland
+Country.ITA=Italien
+Country.LUX=Luxemborg
+Country.LVA=Letland
+Country.MCO=Monaco
+Country.MLT=Malta
+Country.NLD=Holland
+Country.PRT=Portugal
+Country.SVN=Slovenien
+Country.SVK=Slovakiet
+Country.SMR=San Marino
+Country.VAT=Vatikanet
+Country.USA=USA
+Country.GBR=Storbritanien
+Country.SWE=Sverige
+Country.NOR=Norge
+Country.ISL=Island
+Country.CHE=Schweiz
+Country.CAN=Canada
+Country.JPN=Japan
+Country.NZL=New Zealand
+Country.LTU=Litauen
+Country.POL=Polen
+Country.CZE=Tjekkiet
+Country.HUN=Ungarn
+Country.HKG=Hong Kong
+Country.SGP=Singapore
+Country.ZAF=Sydafrika
+Country.BGR=Bulgarien
+Country.ROU=Rum\u00E6nien
+Country.TUR=Tyrkiet
+Country.KOR=Korea
+Country.HRV=Kroation
+Country.RUS=Rusland
+Country.THA=Thailand
+Country.MYS=Malaysia
+Country.PHL=Filippinerne
+Country.IDN=Indonesien
+Country.CHN=Kina
+Country.BRA=Brazilien
+Country.MEX=Mexico
+Country.IND=Indien
+Country.ISR=Israel
+
 
 #Currencies
-MoneyCurrency.DKK=DKK
+MoneyCurrency.DKK=Danske kroner
+MoneyCurrency.EUR=Euro
+MoneyCurrency.USD=Amerikanske dollar
+MoneyCurrency.GBP=Pund Sterling
+MoneyCurrency.SEK=Svenske kroner
+MoneyCurrency.NOK=Norske kroner
+MoneyCurrency.ISK=Islandske kr\u00F3na
+MoneyCurrency.CHF=Schweizerfranc
+MoneyCurrency.CAD=Canadiske dollar
+MoneyCurrency.JPY=Yen
+MoneyCurrency.AUD=Australske dollar
+MoneyCurrency.NZD=New Zealand-dollar
+MoneyCurrency.LVL=Lats
+MoneyCurrency.LTL=Litas
+MoneyCurrency.PLN=Zloty
+MoneyCurrency.CZK=Tjekkiske koruna
+MoneyCurrency.HUF=Forint
+MoneyCurrency.HKD=Hong Kong-dollar
+MoneyCurrency.SGD=Singaporeanske dollar
+MoneyCurrency.ZAR=Rand
+MoneyCurrency.BGN=Bulgariske lev
+MoneyCurrency.RON=Ny leu
+MoneyCurrency.TRY=Nytyrkiske lira
+MoneyCurrency.KRW=Won
+MoneyCurrency.HRK=Kroatiske kuna
+MoneyCurrency.RUB=Russiske rubler
+MoneyCurrency.THB=Bath
+MoneyCurrency.MYR=Malaysiske ringgit
+MoneyCurrency.PHP=Filippinske peso
+MoneyCurrency.IDR=Rupiah
+MoneyCurrency.CNY=Yuan renminbi
+MoneyCurrency.BRL=Brasilianske real
+MoneyCurrency.MXN=Mexicanske peso
+MoneyCurrency.INR=Indiske rupee
+MoneyCurrency.ILS=Ny Shekel
+MoneyCurrency.XDR=Special drawing rights
 
 FinanceAccountType.PROFIT=Indt\u00E6gt
 FinanceAccountType.EXPENSE=Udgift
