#93: All pages with validation. Required fields feedback names are incorrect

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -8,5 +8,5 @@ account.sum.compare=Sum same time last year
 
 dateFrom=From date
 dateTo=To date
-AccountFrom=From account
-AccountTo=To account
+accountFrom=From account
+accountTo=To account
