--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -1,4 +1,4 @@
-title=SaldoBalance
+title=Saldobalance
 description=Her kan du tr\u00E6kke en saldobalance for dit regnskab
 
 
@@ -9,5 +9,5 @@ account.sum.compare=Sum sidste \u00E5r
 
 dateFrom=Fra dato
 dateTo=Til dato
-AccountFrom=Fra konto
-AccountTo=Til konto
+accountFrom=Fra konto
+accountTo=Til konto
