--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
@@ -2,7 +2,7 @@ title=Kasseklader
 description=Her kan du lave klasseklader
 action=Rediger
 
-name.label=Navn
+name=Navn
 new.ledger=Ny kasseklade
 
 daily.ledger.was.deleted=Kassekladen blev slettet
