--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
@@ -3,7 +3,9 @@ description=Here you can create, edit and delete vat types
 
 name=Name
 percentage=Percentage
+financeAccount=Finance account for VAT
 finance.account=Finance account for VAT
+financeAccountReverse=Reverse finance account for VAT
 finance.account.reverse=Reverse finance account for VAT
 
 action=Edit
