#90: Fix translation for datatable

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -123,6 +123,9 @@ FinanceAccountType.LIABILITY=Passiv
 FinanceAccountType.HEADLINE=Overskrift
 FinanceAccountType.SUM=Sum
 
-
+NavigatorLabel=Viser fra ${from} til ${to} af ${of}
+datatable.no-records-found=Ingen data fundet
+datatable.export-to=Eksporter til
+datatable.export-file-name=eksporter
 
 
