--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -25,3 +25,5 @@ text.to.long=Text to long, maximum is 50 character
 must.choose.account.for.vat=If you choose a vattype you must also choose a finance account
 
 following.postings.did.not.balance=The following finance postings did not balance {0}
+
+datatable.no-records-found=No postings in daily ledger
