--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -25,3 +25,5 @@ text.to.long=Teksten er for lang, max 50 bogstaver
 must.choose.account.for.vat=Hvis du v\u00E6lger momstype, skal du ogs\u00E5 v\u00E6lge en finanskonto
 
 following.postings.did.not.balance=De f\u00F8lgende posteringer stemte ikke {0}
+
+datatable.no-records-found=Ingen posteringer i kasseklade
