--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -14,3 +14,5 @@ finance.account.was.never.saved=Finance account was never saved
 
 sum.from=Sum from
 sum.to=Sum to
+
+datatable.no-records-found=No finance accounts found
