--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
@@ -14,3 +14,5 @@ finance.account.was.never.saved=Finanskontoen var ikke gemt
 
 sum.from=Sum fra
 sum.to=Sum til
+
+datatable.no-records-found=Ingen finanskonti fundet
