--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
@@ -14,3 +14,5 @@ name.all.ready.exists=Name is allready in use
 name.to.long=Name is to long
 
 nextBookingNumber=Next booking number
+
+datatable.no-records-found=No daily ledgers found
