--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
@@ -14,3 +14,5 @@ name.all.ready.exists=Navnet er allerede i brug
 name.to.long=Navnet er for langt
 
 nextBookingNumber=N\u00E6ste bilagsnummer
+
+datatable.no-records-found=Ingen kasseklader fundet
