--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
@@ -17,3 +17,5 @@ vat.type.was.never.saved=Vat type was never saved
 
 name.all.ready.exists=Name is all ready in use
 name.to.long=Name is to long
+
+datatable.no-records-found=No vat types found
