--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
@@ -17,3 +17,5 @@ vat.type.was.never.saved=Momsops\u00E6tningen var ikke gemt
 
 name.all.ready.exists=Navnet er allerede i brug
 name.to.long=Navnet er for langt
+
+datatable.no-records-found=Ingen momstyper fundet
