#84: Add date labels to balancepage above columns with amounts #79: BallancePagereport implement year to date

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -122,4 +122,7 @@ FinanceAccountType.LIABILITY=Liability
 FinanceAccountType.HEADLINE=Headline
 FinanceAccountType.SUM=Sum
 
+ReportCompareType.COMPARE_WITH_SAME_PERIOD_LAST_YEAR=Same period last year
+ReportCompareType.COMPARE_YEAR_TO_DATE=Year to date
+ReportCompareType.COMPARE_TO_BUDGET=Budget
 
