--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -128,4 +128,7 @@ datatable.no-records-found=Ingen data fundet
 datatable.export-to=Eksporter til
 datatable.export-file-name=eksporter
 
+ReportCompareType.COMPARE_WITH_SAME_PERIOD_LAST_YEAR=Samme periode sidste \u00E5r
+ReportCompareType.COMPARE_YEAR_TO_DATE=\u00C5r til dato
+ReportCompareType.COMPARE_TO_BUDGET=Budget
 
