--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.utf8.properties
@@ -3,10 +3,12 @@ description=Here you create balance reports for your accounting
 
 account.number=Number
 account.name=Name
-account.sum=Sum
-account.sum.compare=Sum same time last year
+account.sum=Period
+account.sum.compare=Period same time last year
 
 dateFrom=From date
 dateTo=To date
 accountFrom=From account
 accountTo=To account
+
+compare.to=Compare to
