--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage_da.utf8.properties
@@ -4,10 +4,12 @@ description=Her kan du tr\u00E6kke en saldobalance for dit regnskab
 
 account.number=Nummer
 account.name=Navn
-account.sum=Sum
-account.sum.compare=Sum sidste \u00E5r
+account.sum=Periode
+account.sum.compare=Periode sidste \u00E5r
 
 dateFrom=Fra dato
 dateTo=Til dato
 accountFrom=Fra konto
 accountTo=Til konto
+
+compare.to=Sammenlign med
