#80: Ability to choose standard reverse account in dailyledger

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
@@ -16,3 +16,5 @@ name.to.long=Name is to long
 nextBookingNumber=Next booking number
 
 datatable.no-records-found=No daily ledgers found
+
+financeAccount=Standard reverse finance account
