--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
@@ -16,3 +16,5 @@ name.to.long=Navnet er for langt
 nextBookingNumber=N\u00E6ste bilagsnummer
 
 datatable.no-records-found=Ingen kasseklader fundet
+
+financeAccount=Standard modkonto
