#83: Add EU Vat accounts and VAT types for for demo date

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
@@ -5,6 +5,7 @@ new.entity.finance.account.PROFIT.sales.dkk.without.vat=Sales DKK without VAT
 new.entity.finance.account.PROFIT.sales.dkk.without.vat.account.number=1200
 new.entity.finance.account.PROFIT.sales.eur=Sales europe
 new.entity.finance.account.PROFIT.sales.eur.account.number=1300
+new.entity.finance.account.PROFIT.sales.eur.vat.type=EU_U25
 new.entity.finance.account.PROFIT.sales.world=Sales world
 new.entity.finance.account.PROFIT.sales.world.account.number=1400
 
@@ -15,6 +16,7 @@ new.entity.finance.account.EXPENSE.purchases.dk.without.vat=Purchases DKK withou
 new.entity.finance.account.EXPENSE.purchases.dk.without.vat.account.number=2200
 new.entity.finance.account.EXPENSE.purchases.eur=Purchases europe
 new.entity.finance.account.EXPENSE.purchases.eur.account.number=2300
+new.entity.finance.account.EXPENSE.purchases.eur.vat.type=EU_I25
 new.entity.finance.account.EXPENSE.purchases.world=Purchases world
 new.entity.finance.account.EXPENSE.purchases.world.account.number=2400
 
