--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
@@ -1,3 +1,5 @@
+new.entity.finance.account.HEADLINE.sales=Sales
+new.entity.finance.account.HEADLINE.sales.account.number=1000
 new.entity.finance.account.PROFIT.sales.dkk=Sales DKK
 new.entity.finance.account.PROFIT.sales.dkk.account.number=1100
 new.entity.finance.account.PROFIT.sales.dkk.vat.type=U25
@@ -9,6 +11,8 @@ new.entity.finance.account.PROFIT.sales.eur.vat.type=EU_U25
 new.entity.finance.account.PROFIT.sales.world=Sales world
 new.entity.finance.account.PROFIT.sales.world.account.number=1400
 
+new.entity.finance.account.HEADLINE.purchases=Purchases
+new.entity.finance.account.HEADLINE.purchases.account.number=2000
 new.entity.finance.account.EXPENSE.purchases.dk=Purchases DKK
 new.entity.finance.account.EXPENSE.purchases.dk.account.number=2100
 new.entity.finance.account.EXPENSE.purchases.dk.vat.type=I25
@@ -20,6 +24,8 @@ new.entity.finance.account.EXPENSE.purchases.eur.vat.type=EU_I25
 new.entity.finance.account.EXPENSE.purchases.world=Purchases world
 new.entity.finance.account.EXPENSE.purchases.world.account.number=2400
 
+new.entity.finance.account.HEADLINE.wages=Employee expenses
+new.entity.finance.account.HEADLINE.wages.account.number=3000
 new.entity.finance.account.EXPENSE.wages.wages=Wages
 new.entity.finance.account.EXPENSE.wages.wages.account.number=3100
 new.entity.finance.account.EXPENSE.wages.pension=Pension
@@ -37,6 +43,8 @@ new.entity.finance.account.EXPENSE.wages.lunch.account.number=3700
 new.entity.finance.account.EXPENSE.wages.other.cost=Other cost
 new.entity.finance.account.EXPENSE.wages.other.cost.account.number=3800
 
+new.entity.finance.account.HEADLINE.premises=Premises
+new.entity.finance.account.HEADLINE.premises.account.number=4000
 new.entity.finance.account.EXPENSE.premises.rent=Rent
 new.entity.finance.account.EXPENSE.premises.rent.account.number=4100
 new.entity.finance.account.EXPENSE.premises.rent.vat.type=I25
@@ -47,6 +55,8 @@ new.entity.finance.account.EXPENSE.premises.maintenance=Maintenance
 new.entity.finance.account.EXPENSE.premises.maintenance.account.number=4300
 new.entity.finance.account.EXPENSE.premises.maintenance.vat.type=I25
 
+new.entity.finance.account.HEADLINE.administration=Administration
+new.entity.finance.account.HEADLINE.administration.account.number=5000
 new.entity.finance.account.EXPENSE.administration.office.supplies=Office supplies
 new.entity.finance.account.EXPENSE.administration.office.supplies.account.number=5100
 new.entity.finance.account.EXPENSE.administration.office.supplies.vat.type=I25
@@ -79,6 +89,8 @@ new.entity.finance.account.EXPENSE.administration.bad.debt=Bad dept
 new.entity.finance.account.EXPENSE.administration.bad.debt.account.number=6100
 new.entity.finance.account.EXPENSE.administration.bad.debt.vat.type=I25
 
+new.entity.finance.account.HEADLINE.depreciation=Depreciation
+new.entity.finance.account.HEADLINE.depreciation.account.number=7000
 new.entity.finance.account.EXPENSE.depreciation.inventory=Depreciation inventory
 new.entity.finance.account.EXPENSE.depreciation.inventory.account.number=7100
 new.entity.finance.account.EXPENSE.depreciation.goodwill=Depreciation goodwill
@@ -90,18 +102,24 @@ new.entity.finance.account.EXPENSE.depreciation.operation.account.number=7400
 new.entity.finance.account.EXPENSE.depreciation.leasehold=Depreciation leasehold improvements
 new.entity.finance.account.EXPENSE.depreciation.leasehold.account.number=7500
 
+new.entity.finance.account.HEADLINE.received.interest=Received interest
+new.entity.finance.account.HEADLINE.received.interest.account.number=8000
 new.entity.finance.account.PROFIT.received.interest.bank=Received interest bank
-new.entity.finance.account.PROFIT.received.interest.bank.account.number=8100
+new.entity.finance.account.PROFIT.received.interest.bank.account.number=8050
 new.entity.finance.account.PROFIT.received.interest.debtor=Received interest debtor
-new.entity.finance.account.PROFIT.received.interest.debtor.account.number=8200
+new.entity.finance.account.PROFIT.received.interest.debtor.account.number=8100
 
+new.entity.finance.account.HEADLINE.paid.interest=Paid interest
+new.entity.finance.account.HEADLINE.paid.interest.account.number=8200
 new.entity.finance.account.EXPENSE.paid.interest.bank=Paid interest bank
-new.entity.finance.account.EXPENSE.paid.interest.bank.account.number=8300
+new.entity.finance.account.EXPENSE.paid.interest.bank.account.number=8250
 new.entity.finance.account.EXPENSE.paid.interest.creditor=Paid interest creditor
-new.entity.finance.account.EXPENSE.paid.interest.creditor.account.number=8400
+new.entity.finance.account.EXPENSE.paid.interest.creditor.account.number=8300
 new.entity.finance.account.EXPENSE.paid.interest.public=Paid interest government
-new.entity.finance.account.EXPENSE.paid.interest.public.account.number=8500
+new.entity.finance.account.EXPENSE.paid.interest.public.account.number=8400
 
+new.entity.finance.account.HEADLINE.other.tax=Taxes
+new.entity.finance.account.HEADLINE.other.tax.account.number=9000
 new.entity.finance.account.EXPENSE.other.tax.company.tax=Company tax
 new.entity.finance.account.EXPENSE.other.tax.company.tax.account.number=9100
 new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year=Company tax previous year
@@ -109,6 +127,8 @@ new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year.a
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax=Deferred tax
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax.account.number=9300
 
+new.entity.finance.account.HEADLINE.inventory=Inventory
+new.entity.finance.account.HEADLINE.inventory.account.number=11000
 new.entity.finance.account.ASSET.inventory.acquisition.cost.start=Inventory cost start of year
 new.entity.finance.account.ASSET.inventory.acquisition.cost.start.account.number=11100
 new.entity.finance.account.ASSET.inventory.acquisition.cost=Inventory cost
@@ -123,6 +143,8 @@ new.entity.finance.account.ASSET.inventory.depreciation.account.number=11500
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals=Inventory depreciation on disposals
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals.account.number=11600
 
+new.entity.finance.account.HEADLINE.goodwill=Goodwill
+new.entity.finance.account.HEADLINE.goodwill.account.number=12000
 new.entity.finance.account.ASSET.goodwill.acquisition.cost.start=Goodwill cost start of year
 new.entity.finance.account.ASSET.goodwill.acquisition.cost.start.account.number=12100
 new.entity.finance.account.ASSET.goodwill.acquisition.cost=Goodwill cost
@@ -137,6 +159,8 @@ new.entity.finance.account.ASSET.goodwill.depreciation.account.number=12500
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals=Goodwill depreciation on disposals
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals.account.number=12600
 
+new.entity.finance.account.HEADLINE.rights=Rights
+new.entity.finance.account.HEADLINE.rights.account.number=13000
 new.entity.finance.account.ASSET.rights.acquisition.cost.start=Rights cost start of year
 new.entity.finance.account.ASSET.rights.acquisition.cost.start.account.number=13100
 new.entity.finance.account.ASSET.rights.acquisition.cost=Rights cost
@@ -151,6 +175,8 @@ new.entity.finance.account.ASSET.rights.depreciation.account.number=13500
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals=Rights depreciation on disposals
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals.account.number=13600
 
+new.entity.finance.account.HEADLINE.operation=Operation
+new.entity.finance.account.HEADLINE.operation.account.number=14000
 new.entity.finance.account.ASSET.operation.acquisition.cost.start=Operations cost start of year
 new.entity.finance.account.ASSET.operation.acquisition.cost.start.account.number=14100
 new.entity.finance.account.ASSET.operation.acquisition.cost=Operations cost
@@ -165,6 +191,8 @@ new.entity.finance.account.ASSET.operation.depreciation.account.number=14500
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals=Operations depreciation on disposals
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals.account.number=14600
 
+new.entity.finance.account.HEADLINE.leasehold=Leasehold
+new.entity.finance.account.HEADLINE.leasehold.account.number=15000
 new.entity.finance.account.ASSET.leasehold.acquisition.cost.start=Leasehold improvements cost start of year
 new.entity.finance.account.ASSET.leasehold.acquisition.cost.start.account.number=15100
 new.entity.finance.account.ASSET.leasehold.acquisition.cost=Leasehold improvements cost
@@ -179,6 +207,8 @@ new.entity.finance.account.ASSET.leasehold.depreciation.account.number=15500
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals=Leasehold improvements depreciation on disposals
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals.account.number=15600
 
+new.entity.finance.account.HEADLINE.other.assets=Other assets
+new.entity.finance.account.HEADLINE.other.assets.account.number=16000
 new.entity.finance.account.ASSET.debtors=Debtors
 new.entity.finance.account.ASSET.debtors.account.number=16100
 new.entity.finance.account.ASSET.other.receivables=Other receivables
@@ -189,17 +219,25 @@ new.entity.finance.account.ASSET.cash.account.number=17100
 new.entity.finance.account.ASSET.bank.account=Bank account
 new.entity.finance.account.ASSET.bank.account.account.number=17200
 
+new.entity.finance.account.HEADLINE.equity=Equity
+new.entity.finance.account.HEADLINE.equity.account.number=21000
 new.entity.finance.account.LIABILITY.share.capital=Share capital
 new.entity.finance.account.LIABILITY.share.capital.account.number=21100
 new.entity.finance.account.LIABILITY.retained.earnings=Retained yearnings
 new.entity.finance.account.LIABILITY.retained.earnings.account.number=21200
 
+new.entity.finance.account.HEADLINE.provision=Provision
+new.entity.finance.account.HEADLINE.provision.account.number=22000
 new.entity.finance.account.LIABILITY.provisions.deferred.tax=Deferred tax
 new.entity.finance.account.LIABILITY.provisions.deferred.tax.account.number=22100
 
+new.entity.finance.account.HEADLINE.long.term.debt=Long term debt
+new.entity.finance.account.HEADLINE.long.term.debt.account.number=23000
 new.entity.finance.account.LIABILITY.long.term.debt.loan=Long term Loan
 new.entity.finance.account.LIABILITY.long.term.debt.loan.account.number=23100
 
+new.entity.finance.account.HEADLINE.short.term.debt=Short term debt
+new.entity.finance.account.HEADLINE.short.term.debt.account.number=24000
 new.entity.finance.account.LIABILITY.bank.debt.credit=Bank credit
 new.entity.finance.account.LIABILITY.bank.debt.credit.account.number=24100
 
