--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts.properties
@@ -1,3 +1,6 @@
+new.entity.finance.account.CATEGORY.income.statement=INCOME STATEMENT
+new.entity.finance.account.CATEGORY.income.statement.account.number=0000
+
 new.entity.finance.account.HEADLINE.sales=Sales
 new.entity.finance.account.HEADLINE.sales.account.number=1000
 new.entity.finance.account.PROFIT.sales.dkk=Sales DKK
@@ -10,6 +13,10 @@ new.entity.finance.account.PROFIT.sales.eur.account.number=1300
 new.entity.finance.account.PROFIT.sales.eur.vat.type=EU_U25
 new.entity.finance.account.PROFIT.sales.world=Sales world
 new.entity.finance.account.PROFIT.sales.world.account.number=1400
+new.entity.finance.account.SUM.sales=Sales total
+new.entity.finance.account.SUM.sales.account.number=1999
+new.entity.finance.account.SUM.sales.sum.from=1000
+new.entity.finance.account.SUM.sales.sum.to=1999
 
 new.entity.finance.account.HEADLINE.purchases=Purchases
 new.entity.finance.account.HEADLINE.purchases.account.number=2000
@@ -23,6 +30,10 @@ new.entity.finance.account.EXPENSE.purchases.eur.account.number=2300
 new.entity.finance.account.EXPENSE.purchases.eur.vat.type=EU_I25
 new.entity.finance.account.EXPENSE.purchases.world=Purchases world
 new.entity.finance.account.EXPENSE.purchases.world.account.number=2400
+new.entity.finance.account.SUM.purchases=Purchases total
+new.entity.finance.account.SUM.purchases.account.number=2999
+new.entity.finance.account.SUM.purchases.sum.from=2000
+new.entity.finance.account.SUM.purchases.sum.to=2999
 
 new.entity.finance.account.HEADLINE.wages=Employee expenses
 new.entity.finance.account.HEADLINE.wages.account.number=3000
@@ -42,6 +53,10 @@ new.entity.finance.account.EXPENSE.wages.lunch=Lunch
 new.entity.finance.account.EXPENSE.wages.lunch.account.number=3700
 new.entity.finance.account.EXPENSE.wages.other.cost=Other cost
 new.entity.finance.account.EXPENSE.wages.other.cost.account.number=3800
+new.entity.finance.account.SUM.wages=Employee expenses total
+new.entity.finance.account.SUM.wages.account.number=3999
+new.entity.finance.account.SUM.wages.sum.from=3000
+new.entity.finance.account.SUM.wages.sum.to=3999
 
 new.entity.finance.account.HEADLINE.premises=Premises
 new.entity.finance.account.HEADLINE.premises.account.number=4000
@@ -54,6 +69,10 @@ new.entity.finance.account.EXPENSE.premises.supplies.vat.type=I25
 new.entity.finance.account.EXPENSE.premises.maintenance=Maintenance
 new.entity.finance.account.EXPENSE.premises.maintenance.account.number=4300
 new.entity.finance.account.EXPENSE.premises.maintenance.vat.type=I25
+new.entity.finance.account.SUM.premises=Premises total
+new.entity.finance.account.SUM.premises.account.number=4999
+new.entity.finance.account.SUM.premises.sum.from=4000
+new.entity.finance.account.SUM.premises.sum.to=4999
 
 new.entity.finance.account.HEADLINE.administration=Administration
 new.entity.finance.account.HEADLINE.administration.account.number=5000
@@ -88,6 +107,11 @@ new.entity.finance.account.EXPENSE.administration.legal.assistance.vat.type=I25
 new.entity.finance.account.EXPENSE.administration.bad.debt=Bad dept
 new.entity.finance.account.EXPENSE.administration.bad.debt.account.number=6100
 new.entity.finance.account.EXPENSE.administration.bad.debt.vat.type=I25
+new.entity.finance.account.SUM.administration=Administration total
+new.entity.finance.account.SUM.administration.account.number=6999
+new.entity.finance.account.SUM.administration.sum.from=5000
+new.entity.finance.account.SUM.administration.sum.to=6999
+
 
 new.entity.finance.account.HEADLINE.depreciation=Depreciation
 new.entity.finance.account.HEADLINE.depreciation.account.number=7000
@@ -101,6 +125,10 @@ new.entity.finance.account.EXPENSE.depreciation.operation=Depreciation operation
 new.entity.finance.account.EXPENSE.depreciation.operation.account.number=7400
 new.entity.finance.account.EXPENSE.depreciation.leasehold=Depreciation leasehold improvements
 new.entity.finance.account.EXPENSE.depreciation.leasehold.account.number=7500
+new.entity.finance.account.SUM.depreciation=Depreciation total
+new.entity.finance.account.SUM.depreciation.account.number=7999
+new.entity.finance.account.SUM.depreciation.sum.from=7000
+new.entity.finance.account.SUM.depreciation.sum.to=7999
 
 new.entity.finance.account.HEADLINE.received.interest=Received interest
 new.entity.finance.account.HEADLINE.received.interest.account.number=8000
@@ -108,6 +136,10 @@ new.entity.finance.account.PROFIT.received.interest.bank=Received interest bank
 new.entity.finance.account.PROFIT.received.interest.bank.account.number=8050
 new.entity.finance.account.PROFIT.received.interest.debtor=Received interest debtor
 new.entity.finance.account.PROFIT.received.interest.debtor.account.number=8100
+new.entity.finance.account.SUM.received.interest=Received interest total
+new.entity.finance.account.SUM.received.interest.account.number=8199
+new.entity.finance.account.SUM.received.interest.sum.from=8000
+new.entity.finance.account.SUM.received.interest.sum.to=8199
 
 new.entity.finance.account.HEADLINE.paid.interest=Paid interest
 new.entity.finance.account.HEADLINE.paid.interest.account.number=8200
@@ -117,6 +149,10 @@ new.entity.finance.account.EXPENSE.paid.interest.creditor=Paid interest creditor
 new.entity.finance.account.EXPENSE.paid.interest.creditor.account.number=8300
 new.entity.finance.account.EXPENSE.paid.interest.public=Paid interest government
 new.entity.finance.account.EXPENSE.paid.interest.public.account.number=8400
+new.entity.finance.account.SUM.paid.interest=Paid interest total
+new.entity.finance.account.SUM.paid.interest.account.number=8499
+new.entity.finance.account.SUM.paid.interest.sum.from=8200
+new.entity.finance.account.SUM.paid.interest.sum.to=8499
 
 new.entity.finance.account.HEADLINE.other.tax=Taxes
 new.entity.finance.account.HEADLINE.other.tax.account.number=9000
@@ -126,6 +162,19 @@ new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year=C
 new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year.account.number=9200
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax=Deferred tax
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax.account.number=9300
+new.entity.finance.account.SUM.other.tax=Taxes total
+new.entity.finance.account.SUM.other.tax.account.number=9998
+new.entity.finance.account.SUM.other.tax.sum.from=9000
+new.entity.finance.account.SUM.other.tax.sum.to=9998
+
+new.entity.finance.account.SUM.income.statement=INCOME STATEMENT TOTAL
+new.entity.finance.account.SUM.income.statement.account.number=9999
+new.entity.finance.account.SUM.income.statement.sum.from=0
+new.entity.finance.account.SUM.income.statement.sum.to=9999
+
+
+new.entity.finance.account.CATEGORY.assets=ASSETS
+new.entity.finance.account.CATEGORY.assets.account.number=10000
 
 new.entity.finance.account.HEADLINE.inventory=Inventory
 new.entity.finance.account.HEADLINE.inventory.account.number=11000
@@ -142,6 +191,10 @@ new.entity.finance.account.ASSET.inventory.depreciation=Inventory depreciation
 new.entity.finance.account.ASSET.inventory.depreciation.account.number=11500
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals=Inventory depreciation on disposals
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals.account.number=11600
+new.entity.finance.account.SUM.inventory=Inventory total
+new.entity.finance.account.SUM.inventory.account.number=11999
+new.entity.finance.account.SUM.inventory.sum.from=11000
+new.entity.finance.account.SUM.inventory.sum.to=11999
 
 new.entity.finance.account.HEADLINE.goodwill=Goodwill
 new.entity.finance.account.HEADLINE.goodwill.account.number=12000
@@ -158,6 +211,10 @@ new.entity.finance.account.ASSET.goodwill.depreciation=Goodwill depreciation
 new.entity.finance.account.ASSET.goodwill.depreciation.account.number=12500
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals=Goodwill depreciation on disposals
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals.account.number=12600
+new.entity.finance.account.SUM.goodwill=Goodwill total
+new.entity.finance.account.SUM.goodwill.account.number=12999
+new.entity.finance.account.SUM.goodwill.sum.from=12000
+new.entity.finance.account.SUM.goodwill.sum.to=12999
 
 new.entity.finance.account.HEADLINE.rights=Rights
 new.entity.finance.account.HEADLINE.rights.account.number=13000
@@ -174,6 +231,10 @@ new.entity.finance.account.ASSET.rights.depreciation=Rights depreciation
 new.entity.finance.account.ASSET.rights.depreciation.account.number=13500
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals=Rights depreciation on disposals
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals.account.number=13600
+new.entity.finance.account.SUM.rights=Rights total
+new.entity.finance.account.SUM.rights.account.number=13999
+new.entity.finance.account.SUM.rights.sum.from=13000
+new.entity.finance.account.SUM.rights.sum.to=13999
 
 new.entity.finance.account.HEADLINE.operation=Operation
 new.entity.finance.account.HEADLINE.operation.account.number=14000
@@ -190,6 +251,10 @@ new.entity.finance.account.ASSET.operation.depreciation=Operations depreciation
 new.entity.finance.account.ASSET.operation.depreciation.account.number=14500
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals=Operations depreciation on disposals
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals.account.number=14600
+new.entity.finance.account.SUM.operation=Operation total
+new.entity.finance.account.SUM.operation.account.number=14999
+new.entity.finance.account.SUM.operation.sum.from=14000
+new.entity.finance.account.SUM.operation.sum.to=14999
 
 new.entity.finance.account.HEADLINE.leasehold=Leasehold
 new.entity.finance.account.HEADLINE.leasehold.account.number=15000
@@ -206,6 +271,10 @@ new.entity.finance.account.ASSET.leasehold.depreciation=Leasehold improvements d
 new.entity.finance.account.ASSET.leasehold.depreciation.account.number=15500
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals=Leasehold improvements depreciation on disposals
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals.account.number=15600
+new.entity.finance.account.SUM.leasehold=Leasehold total
+new.entity.finance.account.SUM.leasehold.account.number=15999
+new.entity.finance.account.SUM.leasehold.sum.from=15000
+new.entity.finance.account.SUM.leasehold.sum.to=15999
 
 new.entity.finance.account.HEADLINE.other.assets=Other assets
 new.entity.finance.account.HEADLINE.other.assets.account.number=16000
@@ -213,11 +282,29 @@ new.entity.finance.account.ASSET.debtors=Debtors
 new.entity.finance.account.ASSET.debtors.account.number=16100
 new.entity.finance.account.ASSET.other.receivables=Other receivables
 new.entity.finance.account.ASSET.other.receivables.account.number=16200
+new.entity.finance.account.SUM.other.assets=Other assets total
+new.entity.finance.account.SUM.other.assets.account.number=16999
+new.entity.finance.account.SUM.other.assets.sum.from=16000
+new.entity.finance.account.SUM.other.assets.sum.to=16999
 
-new.entity.finance.account.ASSET.cash=Cash
-new.entity.finance.account.ASSET.cash.account.number=17100
-new.entity.finance.account.ASSET.bank.account=Bank account
-new.entity.finance.account.ASSET.bank.account.account.number=17200
+new.entity.finance.account.HEADLINE.liquid.assets=Liquid.assets
+new.entity.finance.account.HEADLINE.liquid.assets.account.number=17000
+new.entity.finance.account.ASSET.liquid.assets.cash=Cash
+new.entity.finance.account.ASSET.liquid.assets.cash.account.number=17100
+new.entity.finance.account.ASSET.liquid.assets.bank.account=Bank account
+new.entity.finance.account.ASSET.liquid.assets.bank.account.account.number=17200
+new.entity.finance.account.SUM.liquid.assets=Liquid assets total
+new.entity.finance.account.SUM.liquid.assets.account.number=17998
+new.entity.finance.account.SUM.liquid.assets.sum.from=17000
+new.entity.finance.account.SUM.liquid.assets.sum.to=17998
+
+new.entity.finance.account.SUM.assets=ASSETS TOTAL
+new.entity.finance.account.SUM.assets.account.number=17999
+new.entity.finance.account.SUM.assets.sum.from=10000
+new.entity.finance.account.SUM.assets.sum.to=17999
+
+new.entity.finance.account.CATEGORY.liabilities=LIABILITIES
+new.entity.finance.account.CATEGORY.liabilities.account.number=20000
 
 new.entity.finance.account.HEADLINE.equity=Equity
 new.entity.finance.account.HEADLINE.equity.account.number=21000
@@ -225,16 +312,28 @@ new.entity.finance.account.LIABILITY.share.capital=Share capital
 new.entity.finance.account.LIABILITY.share.capital.account.number=21100
 new.entity.finance.account.LIABILITY.retained.earnings=Retained yearnings
 new.entity.finance.account.LIABILITY.retained.earnings.account.number=21200
+new.entity.finance.account.SUM.equity=Equity total
+new.entity.finance.account.SUM.equity.account.number=21999
+new.entity.finance.account.SUM.equity.sum.from=21000
+new.entity.finance.account.SUM.equity.sum.to=21999
 
 new.entity.finance.account.HEADLINE.provision=Provision
 new.entity.finance.account.HEADLINE.provision.account.number=22000
 new.entity.finance.account.LIABILITY.provisions.deferred.tax=Deferred tax
 new.entity.finance.account.LIABILITY.provisions.deferred.tax.account.number=22100
+new.entity.finance.account.SUM.provision=Provisions total
+new.entity.finance.account.SUM.provision.account.number=22999
+new.entity.finance.account.SUM.provision.sum.from=22000
+new.entity.finance.account.SUM.provision.sum.to=22999
 
 new.entity.finance.account.HEADLINE.long.term.debt=Long term debt
 new.entity.finance.account.HEADLINE.long.term.debt.account.number=23000
 new.entity.finance.account.LIABILITY.long.term.debt.loan=Long term Loan
 new.entity.finance.account.LIABILITY.long.term.debt.loan.account.number=23100
+new.entity.finance.account.SUM.long.term.debt=Long term debt total
+new.entity.finance.account.SUM.long.term.debt.account.number=23999
+new.entity.finance.account.SUM.long.term.debt.sum.from=23000
+new.entity.finance.account.SUM.long.term.debt.sum.to=23999
 
 new.entity.finance.account.HEADLINE.short.term.debt=Short term debt
 new.entity.finance.account.HEADLINE.short.term.debt.account.number=24000
@@ -261,7 +360,15 @@ new.entity.finance.account.LIABILITY.other.debt.employee.holiday.pay=Holiday pay
 new.entity.finance.account.LIABILITY.other.debt.employee.holiday.pay.account.number=27600
 new.entity.finance.account.LIABILITY.other.debt.others=Debt others
 new.entity.finance.account.LIABILITY.other.debt.others.account.number=27700
+new.entity.finance.account.SUM.short.term.debt=Short term debt total
+new.entity.finance.account.SUM.short.term.debt.account.number=29998
+new.entity.finance.account.SUM.short.term.debt.sum.from=24000
+new.entity.finance.account.SUM.short.term.debt.sum.to=29998
 
+new.entity.finance.account.SUM.liabilities=LIABILITIES TOTAL
+new.entity.finance.account.SUM.liabilities.account.number=29999
+new.entity.finance.account.SUM.liabilities.sum.from=20000
+new.entity.finance.account.SUM.liabilities.sum.to=29999
 
 
 
