#112: Remove DAO objects from validators and use service

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -119,6 +119,7 @@ FinanceAccountType.PROFIT=Profit
 FinanceAccountType.EXPENSE=Expense
 FinanceAccountType.ASSET=Asset
 FinanceAccountType.LIABILITY=Liability
+FinanceAccountType.CATEGORY=Category
 FinanceAccountType.HEADLINE=Headline
 FinanceAccountType.SUM=Sum
 
