--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -13,6 +13,11 @@ changes.has.been.saved=Changes have been saved
 finance.account.was.never.saved=Finance account was never saved
 
 sum.from=Sum from
+sumFrom=Sum from
 sum.to=Sum to
+sumTo=Sum to
+
+number.all.ready.exists=Account number allready exists
+number.to.long=Account number to long
 
 datatable.no-records-found=No finance accounts found
