--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -120,6 +120,7 @@ FinanceAccountType.PROFIT=Indt\u00E6gt
 FinanceAccountType.EXPENSE=Udgift
 FinanceAccountType.ASSET=Aktiv
 FinanceAccountType.LIABILITY=Passiv
+FinanceAccountType.CATEGORY=Kategori
 FinanceAccountType.HEADLINE=Overskrift
 FinanceAccountType.SUM=Sum
 
