--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
@@ -13,6 +13,11 @@ changes.has.been.saved=\u00C6ndringerne er blevet gemt
 finance.account.was.never.saved=Finanskontoen var ikke gemt
 
 sum.from=Sum fra
+sumFrom=Sum fra
 sum.to=Sum til
+sumTo=Sum til
+
+number.all.ready.exists=Kontonummer allerede er i brug
+number.to.long=Kontonummer er for langt
 
 datatable.no-records-found=Ingen finanskonti fundet
