#100: Implement fiscal years and their limitations

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -8,6 +8,8 @@ button.delete=Delete
 button.new=New
 button.loading=Loading...
 button.refresh=Refresh
+button.open=Open
+button.close=Close
 
 #Links
 settings=Settings
@@ -15,6 +17,7 @@ settings.base.data=Base data
 settings.chart.of.accounts=Chart of accounts
 settings.daily.ledger=Daily ledger
 settings.vat.type=Vat types
+settings.fiscal.year=Fiscal years
 
 bookkeeping=Bookkeeping
 bookkeeping.daybook=Daily ledger
