--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -8,6 +8,8 @@ button.delete=Slet
 button.new=Ny
 button.loading=Indl\u00E6ser...
 button.refresh=Genopfrisk
+button.open=\u00C5ben
+button.close=Luk
 
 #Links
 settings=Indstillinger
@@ -15,6 +17,7 @@ settings.base.data=Stamdata
 settings.chart.of.accounts=Kontoplan
 settings.daily.ledger=Kasseklader
 settings.vat.type=Momsops\u00E6tning
+settings.fiscal.year=Regnskabs\u00E5r
 
 bookkeeping=Bogf\u00F8ring
 bookkeeping.daybook=Kasseklade
