#100: Implement fiscal years and their limitations and small UI improvements

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -4,6 +4,7 @@ eazy.regnskab.brand=Eazy accounting
 button.save=Save
 button.cancel=Cancel
 button.edit=Edit
+button.action=Action
 button.delete=Delete
 button.new=New
 button.loading=Loading...
@@ -125,6 +126,10 @@ FinanceAccountType.LIABILITY=Liability
 FinanceAccountType.CATEGORY=Category
 FinanceAccountType.HEADLINE=Headline
 FinanceAccountType.SUM=Sum
+
+FiscalYearStatus=Status
+FiscalYearStatus.OPEN=Open
+FiscalYearStatus.LOCKED=Closed
 
 ReportCompareType.COMPARE_WITH_SAME_PERIOD_LAST_YEAR=Same period last year
 ReportCompareType.COMPARE_YEAR_TO_DATE=Year to date
