--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -4,6 +4,7 @@ eazy.regnskab.brand=Eazy regnskab
 button.save=Gem
 button.cancel=Fortryd
 button.edit=Rediger
+button.action=Handling
 button.delete=Slet
 button.new=Ny
 button.loading=Indl\u00E6ser...
@@ -126,6 +127,10 @@ FinanceAccountType.LIABILITY=Passiv
 FinanceAccountType.CATEGORY=Kategori
 FinanceAccountType.HEADLINE=Overskrift
 FinanceAccountType.SUM=Sum
+
+fiscalYearStatus=Status
+FiscalYearStatus.OPEN=\u00C5ben
+FiscalYearStatus.LOCKED=Lukket
 
 NavigatorLabel=Viser fra ${from} til ${to} af ${of}
 datatable.no-records-found=Ingen data fundet
