--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -5,7 +5,7 @@ accountNumber=Account number
 vatType=VAT type
 financeAccountType=Account type
 standard.reverse.finance.account=Standard reverse account
-action=Edit
+action=Action
 
 finance.account.was.deleted=Finance account was deleted
 finance.account.is.in.use=Finance account is in use, and cannot be deleted
