--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
@@ -5,7 +5,7 @@ accountNumber=Kontonummer
 vatType=Momstype
 financeAccountType=Kontotype
 standard.reverse.finance.account=Standard modkonto
-action=Rediger
+action=Handling
 
 finance.account.was.deleted=Finanskontoen blev slettet
 finance.account.is.in.use=Finanskontoen er i brug og kan ikke slettes.
