--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.utf8.properties
@@ -13,7 +13,14 @@ fiscal.year.dates.are.in.use=The fiscal year contains postings in the old dates
 start.date.must.be.before.end.date=Start date must be before end date
 dates.cross.another.fiscal.year=Dates cross another fiscal year
 year.must.be.after.last.year=
+can.only.open.if.next.open=Can only open if next year is open
+can.only.close.if.previous.closed=Can only closed if previous is closed
+
+year.opened=Year opened
+year.close=Year closed
 
 daysBetween=Days in year
+
+action=Action
 
 datatable.no-records-found=No fiscal years found
