--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage_da.utf8.properties
@@ -13,9 +13,14 @@ fiscal.year.dates.are.in.use=Regnskabs\u00E5ret indeholder posteringer i de gaml
 start.date.must.be.before.end.date=Start dato skal v\u00E6re f\u00F8r slut dato
 dates.cross.another.fiscal.year=Datoerne krydser et eksisterende \u00E5r
 year.must.be.after.last.year=TODO
+can.only.open.if.next.open=Kan kun \u00E5bne hvis det n\u00E6ste regnskabs\u00E5r er \u00E5bent
+can.only.close.if.previous.closed=Kan kun lukke hvis det forrige regnskabs\u00E5r er lukket
+
+year.opened=\u00C5r \u00E5bnet
+year.close=\u00C5r lukket
 
 daysBetween=Dage i \u00E5ret
 
-action=Rediger
+action=Handling
 
 datatable.no-records-found=Ingen regnskabs\u00E5r fundet
