--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
@@ -8,7 +8,7 @@ financeAccount=Finanskonto til moms
 finance.account.reverse=Modfinanskonto til moms
 financeAccountReverse=Modfinanskonto til moms
 
-action=Rediger
+action=Handling
 
 vat.type.was.deleted=Momsops\u00E6tning blev slettet
 vat.type.is.in.use=Momsops\u00E6tningen er i brug og kan ikke slettes.
