--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
@@ -8,7 +8,7 @@ finance.account=Finance account for VAT
 financeAccountReverse=Reverse finance account for VAT
 finance.account.reverse=Reverse finance account for VAT
 
-action=Edit
+action=Action
 
 vat.type.was.deleted=Vat type was deleted
 vat.type.is.in.use=Vat type is in use, and cannot be deleted
