#100: Implement fiscal years and their limitations

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -1,7 +1,7 @@
 title=Bookkeeping
 description=Here you can create and edit finance postings
 daily.ledger=Daily ledgers
-action=Edit
+action=Action
 
 button.save=Save posting
 button.book.chosen=Book chosen postings
@@ -25,5 +25,6 @@ text.to.long=Text to long, maximum is 50 character
 must.choose.account.for.vat=If you choose a vattype you must also choose a finance account
 
 following.postings.did.not.balance=The following finance postings did not balance {0}
+following.postings.where.not.in.open.fiscal.year=The following finance postings are not in a open fiscal year {0}
 
 datatable.no-records-found=No postings in daily ledger
