--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -1,7 +1,7 @@
 title=Bogf\u00F8ring
 description=Her kan du oprette og redigere finansposteringer
 daily.ledger=Kasseklader
-action=Rediger
+action=Handling
 
 button.save=Gem postering
 button.book.chosen=Bogf\u00F8r valgte posteringer
@@ -25,5 +25,6 @@ text.to.long=Teksten er for lang, max 50 bogstaver
 must.choose.account.for.vat=Hvis du v\u00E6lger momstype, skal du ogs\u00E5 v\u00E6lge en finanskonto
 
 following.postings.did.not.balance=De f\u00F8lgende posteringer stemte ikke {0}
+following.postings.where.not.in.open.fiscal.year=De f\u00F8lgende posteringer er ikke i et \u00E5bent regnskabs\u00E5r {0}
 
 datatable.no-records-found=Ingen posteringer i kasseklade
